css/index.css
@import url('https://fonts.googleapis.com/css2?family=Ubuntu+Mono:ital,wght@0,400;1,700&display=swap');
@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');


body {
  font-family: 'Ubuntu Mono', monospace, Segoe UI, Arial, Helvetica, sans-serif;
  background-color: #03090d;
}

body {
  padding: 0;
  margin: 0;
}

.screen {
  height: 100vh;
  width: 100vw;
  display: flex;
}

.img-header {
  border-radius: 40px;
  border: solid;
  border-width: 3px;
  border-color: rgb(90, 117, 143);
}

.about-me {
  width: 30%;
  height: 100vh;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  background: rgb(233, 233, 233);
  position: relative;
}

.divisor {

  position: absolute;
  height: 100%;
  top: 0;
  right: 0;
  width: 3px;
  background-color: rgb(90, 117, 143);

}

.information {
  flex: 1;
  background: rgb(233, 233, 233);
}

.nav {
  height: 75px;
  background-color: rgb(233, 233, 233);
  display: flex;
  align-items: center;
  padding: 0 1rem;
  position: relative;
}

.divisor-nav {

  position: absolute;
  height: 3px;
  bottom: 0;
  left: 0;
  width: 100%;
  background-color: rgb(90, 117, 143);

}

.nav>button {
  margin: 0 1rem 0 0;
  height: 3rem;
  background-color: inherit;
  border: none;
  font-family: 'Ubuntu Mono', monospace, Segoe UI, Arial, Helvetica, sans-serif;
  font-size: 1.5rem;
  font-weight: bold;
  color: rgb(90, 117, 143);
}

.nav>button:hover {
  font-size: 1.5rem;
  font-weight: bold;
  color: rgb(40, 61, 82);
}

.button-container>button {
  margin: 0 1rem 0 0;
  height: 3rem;
  background-color: inherit;
  border: none;
  font-family: 'Ubuntu Mono', monospace, Segoe UI, Arial, Helvetica, sans-serif;
  font-size: 1.5rem;
  font-weight: bold;
  color: rgb(90, 117, 143);
}

.button-container>button:hover {
  font-size: 1.5rem;
  font-weight: bold;
  font-family: 'Ubuntu Mono', monospace, Segoe UI, Arial, Helvetica, sans-serif;
  color: rgb(40, 61, 82);

}

.title {
  margin-top: 50px;
  margin-bottom: 30px;
  font-size: 2.4rem;
  font-weight: bold;
  color: rgb(90, 117, 143);
}

.content-box {
  font-size: 1.2rem color rgb(90, 117, 143);
  border: solid;
  border-color: rgb(90, 117, 143);
  border-radius: 5px;
  border-width: 3px;
  margin: 10px
}

.content-title {
  margin: 5px;
  font-weight: bold;
  font-size: 1.3rem;
  color: rgb(90, 117, 143);
}

.content-title:hover {
  margin: 5px;
  font-weight: bold;
  font-size: 1.4rem;
  color: rgb(40, 61, 82);
}


.content-text {

  margin: 5px;
  font-weight: bold;
  font-size: 1.1rem;
  color: rgb(90, 117, 143);
}


.section {
  max-height: calc(100% - 75px);
  overflow-y: auto;
  background-color: aqua;
}

